[metadata]
name = daltools
version = attr: daltools.__version__
author = Olav Vahtras
author_email = olav.vahtras@gmail.com
license = GPLv3
license_file = LICENSE
description = Daltools: utilities for extracting data from Dalton quantum chemistry calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vahtras/daltools
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Chemistry

[options]
packages = daltools
python_requires >= 3.6
install_requires =
    blocked-matrix-utils >= 1.0.9
    fortran-binary
